# Qwen-Financial-Post-training

./: .gitignore  README.md  pyproject.toml
configs/: lora_local.yaml  lora_local_lowmem.yaml  lora_server_48gb.yaml  lora_server_48gb_wandb.yaml
scripts/: compare_results.py  evaluate.py  merge_lora.py  prepare_data.py  smoke_test_cuda.py  train_lora.py
src/finance_lora/: __init__.py  config.py  formatting.py  modeling.py
