[project]
name = "financial-qwen-lora"
version = "0.1.0"
description = "A small LoRA SFT project for financial numerical QA with Qwen."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=0.34.0",
    "datasets>=2.20.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.12.0",
    "pyyaml>=6.0.1",
    "safetensors>=0.4.4",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "tqdm>=4.66.0",
    "transformers>=4.56.0",
]

[project.optional-dependencies]
tracking = ["trackio>=0.2.0"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"
